Update domain for foundations

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
     <![endif]-->
 
     <div class="custom-header" ng-controller="HeaderFooter">
-      <img class="custom-header-logo" ng-src="{{logoUrl}}"/>
+      <img class="custom-header-logo" ng-src="{{headerLogoUrl}}"/>
       <a ng-href="{{backUrl}}" class="custom-header-back-url">{{backUrlLabel}}</a>
       <div class="custom-header-login-prompt">{{loginPromptText}}</div>
     </div>
