accessibility and design improvements

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="custom-header" ng-controller="HeaderFooter">
+    <div class="custom-header" ng-show="isReady" ng-controller="HeaderFooter" ng-cloak>
       <div class="custom-header-identity">
         <img class="custom-header-logo" ng-src="{{headerLogoUrl}}"/>  
       </div>
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <div class="custom-footer" ng-controller="HeaderFooter">
+    <div class="custom-footer" ng-controller="HeaderFooter" ng-show="isReady" ng-cloak>
       <div class="custom-footer-disclaimer">{{disclaimerText}}</div>
     </div>
 
